--- a/index.html
+++ b/index.html
@@ -182,6 +182,14 @@
     </div>
   </a>
 
+  <!-- Rocket Project -->
+  <a href="rocket_project.html">
+    <div class="card">
+      <img src="images/rocket_thumbnail.jpg" alt="Rocket Project">
+      <div class="card-title">Bottle Rocket – Dynamics Lab</div>
+    </div>
+  </a>
+  
   <!-- Electronics & Instrumentation Project -->
   <a href="sensor.html">
     <div class="card">
