--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
   </a>
 
   <!-- Rocket Project -->
-  <a href="rocket_project.html">
+  <a href="rocket.html">
     <div class="card">
-      <img src="images/rocket_thumbnail.jpg" alt="Rocket Project">
+      <img src="images/rocket_altimeter_1.jpg" alt="Rocket Project">
       <div class="card-title">Bottle Rocket – Dynamics Lab</div>
     </div>
   </a>
